# openRogue

./: .gitignore  .gitmodules  Makefile  config  guidelines.txt  ideas.txt  plans.txt  playground.py  readme.txt
python/: README.txt
resources/bitmaps/: Hack_square_64x64.charmap  cozette.charmap
resources/shaders/: rect.frag  rect.vert  text.frag  text.vert  text_frag.fs  text_vert.vs
scripts/: reference.txt
scripts/openRogue/: __init__.py  __main__.py  cjit.py  config_reader.py  extern.py  modules.py  signal.py  utils.py
scripts/openRogue/extensions/chance/: __init__.py
scripts/openRogue/extensions/lang/: __init__.py  _test.py  lang.py
scripts/openRogue/extensions/meta/: __init__.py
scripts/openRogue/extensions/procgen/lingua/: lingua.py
scripts/openRogue/ffi/: __init__.py  definitions.py  ffi.py  window_signals.py
scripts/openRogue/ffi/implementations/: cffi.py  ctypes.py  definitions.py
scripts/openRogue/lang/: _test.py  lang.py
scripts/openRogue/language/: __init__.py  language.py  test.py
scripts/openRogue/nodes/: __init__.py  container.py  context.py  label.py  node.py  padding.py  root.py  styles.py  ui.py  window.py
scripts/openRogue/nodes/window/: window.py
scripts/openRogue/procgen/lang/: lang.py  window_titles.rules
scripts/openRogue/types/: __init__.py  color.py  component.py  sine.py  vector.py
scripts/testPayload/: __init__.py
src/: errors.h  main.c  system.h  threads.h
src/backend/: CMakeLists.txt  backend.h  context.c  context.h  definitions.h  error.h  events.h  map.c  map.h  rogue_definitions.h  rogue_events.h  sdl_errors.c  system.h  threads.h
src/backend/gnubuild/: CMakeCache.txt  Makefile  cmake_install.cmake
src/backend/msvcbuild/: CMakeCache.txt
src/backend/window/: render.c  render.h  render_program.h  window.c  window.h  window_layer_interface.txt
src/backend/window/opengl/: render_program.h  window.c  window.h
src/backend/window/opengl/text/: text.c  text.h
src/backend/window/opengl/text/shaders/: text_frag.fs  text_vert.vs
src/common/: map.c  map.h  stringy.c  stringy.h  system.h  threads.h
src/loader/: CMakeLists.txt  config  loader.c
